[package]
name = "adaptive-client-rust"
version = "0.2.0"
edition = "2024"
description = "A client for interacting with the Adaptive platform"
license = "MIT OR Apache-2.0"

[dependencies]
async-stream = "0.3"
futures = "0.3"
graphql_client = "0.15.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "sync"] }
thiserror = "2.0.17"
